--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dicebear/collection": "^6.0.4",
+    "@dicebear/core": "^6.0.4",
     "@headlessui/react": "^1.7.15",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "@resvg/resvg-js-win32-x64-msvc": "^2.4.1",
     "@tailwindcss/forms": "^0.5.4",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -20,10 +23,13 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "exiftool-vendored": "^21.5.1",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
+    "next-images": "^1.8.5",
     "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.26",
     "react": "18.2.0",
@@ -32,6 +38,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
