--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
