--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
