--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-cloudinary": "^4.15.0",
     "next-images": "^1.8.5",
     "next-superjson-plugin": "^0.5.9",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.26",
     "pusher": "^5.1.3",
     "pusher-js": "^8.3.0",
